--- a/README
+++ b/README
@@ -1,32 +1,31 @@
-Author	    : Muhummad Yunus Patel
-Student#	: PTLMUH006
-Date		: 25 - March - 2015
+##Assignment 2 - OS Scheduling
 
-Name		: Assignment 2 - OS: Scheduling
+Author : Muhummad Yunus Patel
+Student# : PTLMUH006
+Date : 25-March-2015
 
-_____NOTE: Should you require any clarification, please feel free to contact me 
+_NOTE_: Should you require any clarification, please feel free to contact me 
            at muhummad.patel@gmail.com. Thank you. :)
 
-Description:
+###Description:
 This assignment involved trying to model the behaviour of an operating system 
 kernel from the perspective of process scheduling. A basic framework of 
 component interfaces was provided to guide the design and implementation of this
  simulation. My design is based on the framework provided and is comprised of 
  the following 4 components:
-
-    >The Simulation driver:___
-    +This can be thought of as the "motherboard" of this simulation as it 
+ * The Simulation driver:
+  * This can be thought of as the "motherboard" of this simulation as it 
      connects and coordinates all of the components required for proper
      functioning.
-    +sets up the simulation by loading the config files, adding initial events 
+  * sets up the simulation by loading the config files, adding initial events 
      to the eventQueue, and initialising all components.
-    +Manages the main simulation loop. The main simulation loop executes any 
+  * Manages the main simulation loop. The main simulation loop executes any 
      event that is scheduled for before or at the current system time, and then 
      executes the cpu until the next event is due to occur.
-    +Manages the eventQueue. The EventQueue is a queue of events that are 
+  * Manages the eventQueue. The EventQueue is a queue of events that are 
      waiting to be processed. These events are load program evts, timout evts, 
      or wakeup evts.
-    +Manages processing of events. Events will only be processed at the time 
+  * Manages processing of events. Events will only be processed at the time 
      they have been scheduled for. They are not allowed to execute before time. 
      This is accomplished by consulting the SystemTimer instance.
     
@@ -78,4 +77,3 @@ steps.
 NOTE: to run your own tests, copy the test folder (for example of test folder, 
 see TestOne in the src folder) into the src folder and compile (make) and then 
 type java Simulator <yourFolder/configFileName.cfg> <slice length> <dispatch overhead>.
-
